# ionix

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: example.toml  nested_menu.toml
src/: lib.rs  main.rs
src/config/: loader.rs  mod.rs
src/schema/: codegen.rs  kconfig.rs  mod.rs
src/ui/: app.rs  events.rs  mod.rs
src/ui/widgets/: config_list.rs  help_panel.rs  input_dialog.rs  mod.rs  status_bar.rs
