[package]
name = "ionix"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = { version = "0.29", features = ["event-stream"] }
anyhow = "1.0"
toml = "1"
serde = { version = "1.0", features = ["derive"] }
fuzzy-matcher = "0.3"
dirs = "6"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
futures = "0.3"

[dev-dependencies]
pretty_assertions = "1.4"
